--- a/lang-portal/electron-front-end/package.json
+++ b/lang-portal/electron-front-end/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "electron-front-end",
+  "name": "lang-portal-frontend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Language Learning Portal Frontend",
+  "main": "main.js",
   "scripts": {
+    "start": "electron .",
+    "dev": "electron . --dev",
+    "build": "electron-builder",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["electron", "language-learning", "frontend"],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "electron": "^28.0.0",
+    "electron-builder": "^24.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.6.0"
+  }
 }
